# dyndnsd

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  renovate.json
.github/workflows/: anchore.yml  build.yml  check.yml  release.yml  trivy.yml
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
src/: config.rs  dns_service.rs  dyndns_service.rs  hetzner_dns_client.rs  lib.rs  main.rs  netlink_public_ip_service.rs  public_ip_service.rs  ubus_jsonrpc_public_ip_service.rs
tests/: hetzner_dns_client_tests.rs  ubus_jsonrpc_public_ip_service_tests.rs
