[package]
name = "dyndnsd"
version = "0.2.3"
authors = ["Carsten Saathoff <carsten@kodemaniak.de>"]
edition = "2018"

[dependencies]
futures = "0.3.24"
async-trait = "0.1.56"
tokio = { version = "1.19.2", features = ["rt", "macros"] }
clokwerk = "0.3.5"
serde = "1.0.137"
serde_json = "1.0.86"
surf = { version = "2.3.2", features = ["h1-client-rustls"] }
mockall_double = "0.3.0"
envconfig = "0.10.0"
env_logger = "0.9.1"
log = "0.4.17"
openssl-probe = "0.1.5"

[dev-dependencies]
mockall = "0.11.2"
wiremock = "0.5.14"
