[package]
name = "dyndnsd"
version = "0.2.3"
authors = ["Carsten Saathoff <carsten@kodemaniak.de>"]
edition = "2018"

[dependencies]
futures = "0.3.28"
async-trait = "0.1.72"
tokio = { version = "1.20.4", features = ["rt", "macros"] }
clokwerk = "0.4.0"
serde = "1.0.178"
serde_json = "1.0.86"
surf = { version = "2.3.2", features = ["h1-client-rustls"] }
mockall_double = "0.3.0"
envconfig = "0.10.0"
env_logger = "0.10.0"
log = "0.4.19"
openssl-probe = "0.1.5"

[dev-dependencies]
mockall = "0.11.4"
wiremock = "0.5.19"
