[package]
name = "dyndnsd"
version = "0.3.0"
authors = ["Carsten Saathoff <carsten@kodemaniak.de>"]
edition = "2021"

[dependencies]
futures = "0.3.28"
async-trait = "0.1.72"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
clokwerk = "0.4.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
mockall_double = "0.3.0"
envconfig = "0.10.0"
env_logger = "0.10.0"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["json"] }
thiserror = "1.0.44"
uuid = { version = "1.4.1", features = ["serde", "v4"] }

[dev-dependencies]
mockall = "0.11.4"
wiremock = "0.5.19"
